--- a/package.json
+++ b/package.json
@@ -41,36 +41,36 @@
     "test-types-integration": "mocha --full-trace test/integration/*-test.js"
   },
   "devDependencies": {
-    "@rollup/plugin-json": "^5.0.2",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-terser": "^0.4.0",
     "@simonbrunel/vuepress-plugin-versions": "^0.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
     "chart.js": "^4.1.2",
     "chartjs-test-utils": "^0.5.0",
-    "concurrently": "^7.0.0",
+    "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.2.0",
+    "eslint": "^8.33.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-markdown": "^2.0.1",
-    "fs-extra": "^10.0.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-markdown": "^3.0.0",
+    "fs-extra": "^11.1.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
-    "karma-rollup-preprocessor": "^7.0.7",
+    "karma-rollup-preprocessor": "7.0.7",
     "markdown-it-include": "^2.0.0",
-    "mocha": "^9.1.3",
-    "pixelmatch": "^5.2.1",
-    "rollup": "^3.7.0",
+    "mocha": "^10.2.0",
+    "pixelmatch": "^5.3.0",
+    "rollup": "^3.14.0",
     "rollup-plugin-istanbul": "^4.0.0",
-    "typedoc": "^0.23.8",
-    "typedoc-plugin-markdown": "^3.13.3",
+    "typedoc": "^0.23.24",
+    "typedoc-plugin-markdown": "^3.14.0",
     "typescript": "^4.2.4",
     "vuepress": "^1.9.7",
     "vuepress-plugin-flexsearch": "^0.3.0",
